codama-macros/tests/codama_type_derive/multiple_nodes.fail.stderr
error: This attribute is overridden by a `#[codama(node(...))]` attribute above
 --> tests/codama_type_derive/multiple_nodes.fail.rs:6:1
  |
6 | #[codama(node(public_key_type))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: This attribute is overridden by a `#[codama(node(...))]` attribute above
 --> tests/codama_type_derive/multiple_nodes.fail.rs:8:1
  |
8 | #[codama(node(number_type(u32)))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: This attribute is overridden by a `#[codama(node(...))]` attribute above
  --> tests/codama_type_derive/multiple_nodes.fail.rs:11:5
   |
11 |     #[codama(node(public_key_type))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: This attribute is overridden by a `#[codama(node(...))]` attribute above
  --> tests/codama_type_derive/multiple_nodes.fail.rs:17:1
   |
17 | #[codama(node(public_key_type))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: This attribute is overridden by a `#[codama(node(...))]` attribute above
  --> tests/codama_type_derive/multiple_nodes.fail.rs:20:5
   |
20 |     #[codama(node(public_key_type))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: This attribute is overridden by a `#[codama(node(...))]` attribute above
  --> tests/codama_type_derive/multiple_nodes.fail.rs:23:9
   |
23 |         #[codama(node(public_key_type))]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
